docs/config-repo-manifests/sop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sop-prod
    annotations:
        reloader.stakater.com/auto: "true"
    labels:
        run: sop-prod
spec:
    selector:
        matchLabels:
            run: sop-prod
    template:
        metadata:
            labels:
                run: sop-prod
        spec:
            securityContext:
                fsGroup: 1001
                runAsUser: 1001
                runAsGroup: 1001
                runAsNonRoot: true
            imagePullSecrets:
                - name: ghcr-credentials
            containers:
                - name: sop-prod
                  image: ghcr.io/openlaw-au/sop:0.1.0
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 15
                      periodSeconds: 30
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 3000
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  resources:
                      requests:
                          memory: "200Mi"
                      limits:
                          memory: "2Gi"
