docs/config-repo-manifests/sop-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: sop-prod
spec:
    selector:
        run: sop-prod
    type: NodePort
    ports:
        - nodePort: 30020
          port: 3000
          protocol: TCP
          targetPort: 3000
